<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:background="@drawable/ic_ya_disk"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/account_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/colorBlack"
        android:textSize="22sp"
        tools:text="TEST_NICKNAME" />

    <TextView
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/account_name"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorBlack"
        android:textSize="17sp"
        android:text="@string/county" />

    <TextView
        android:id="@+id/total_space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/country"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorBlack"
        android:textSize="17sp"
        android:text="@string/total_space" />

    <TextView
        android:id="@+id/used_space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/total_space"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorBlack"
        android:textSize="17sp"
        android:text="@string/used_space" />

    <TextView
        android:id="@+id/trash_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/used_space"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorBlack"
        android:textSize="17sp"
        android:text="@string/trash_size" />

    <Button
        android:id="@+id/log_out"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_below="@id/trash_size"
        android:layout_marginTop="7dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="15sp"
        android:text="@string/log_out"
        android:drawableStart="@mipmap/ic_exit_to_app_black_24dp" />



</RelativeLayout>