<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">




    <TextView
        android:id="@+id/question"
        android:layout_width="250dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:textColor="@color/colorBlack"
        android:textSize="25sp"
        android:text="@string/confirm" />

    <Button
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/question"
        android:layout_alignStart="@+id/question"
        android:layout_margin="10dp"
        android:textSize="15sp"
        android:text="@string/yes"
        />


    <Button
        android:id="@+id/no_confirm"
        android:layout_width="95dp"
        android:layout_height="40dp"
        android:layout_alignEnd="@+id/question"
        android:layout_below="@+id/question"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/confirm"
        android:text="@string/no"
        android:textSize="15sp" />



</RelativeLayout>